<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/menubar"
        android:src="@drawable/image"
        android:paddingRight="350dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addpeople"
        android:textSize="12sp"
        android:background="@drawable/menubar"
        android:textColor="@color/coloradd"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"/>
    <EditText
        android:id="@+id/edit1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/searchspace"
        android:text="@string/Search"
        android:paddingLeft="20dp"
        android:textColor="@color/colorsearch"
        android:textSize="8sp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/search"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintLeft_toLeftOf="@id/edit1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="300dp"
        />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/edit1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/member"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"/>

    <ImageView

        android:layout_width="350dp"
        android:layout_height="39dp"
        android:src="@drawable/avatar"
        app:layout_constraintTop_toTopOf="@id/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:paddingRight="250dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LukeRay"
        android:textSize="10sp"
        android:textColor="@color/colorbrown"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lorem"
        android:textColor="@color/colorsearch"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plus"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="320dp"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/member"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"/>


    <ImageView

        android:layout_width="350dp"
        android:layout_height="39dp"
        android:src="@drawable/avatar"
        app:layout_constraintTop_toTopOf="@id/text3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:paddingRight="250dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DaisyLake"
        android:textSize="10sp"
        android:textColor="@color/colorbrown"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:paddingLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lorem"
        android:textColor="@color/colorsearch"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plus"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="320dp"/>
    <TextView
        android:id="@+id/text4"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/member"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"/>

    <ImageView

        android:layout_width="350dp"
        android:layout_height="39dp"
        android:src="@drawable/avatar"
        app:layout_constraintTop_toTopOf="@id/text4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:paddingRight="250dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MarkSmith"
        android:textSize="10sp"
        android:textColor="@color/colorbrown"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="160dp"
        android:paddingLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lorem"
        android:textColor="@color/colorsearch"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plus"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="320dp"/>
    <TextView
        android:id="@+id/text5"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/member"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="210dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"/>

    <ImageView

        android:layout_width="350dp"
        android:layout_height="39dp"
        android:src="@drawable/avatar"
        app:layout_constraintTop_toTopOf="@id/text5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:paddingRight="250dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DaisyLake"
        android:textSize="10sp"
        android:textColor="@color/colorbrown"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="220dp"
        android:paddingLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lorem"
        android:textColor="@color/colorsearch"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plus"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="320dp"/>
    <TextView
        android:id="@+id/text6"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/member"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="270dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"/>

    <ImageView

        android:layout_width="350dp"
        android:layout_height="39dp"
        android:src="@drawable/avatar"
        app:layout_constraintTop_toTopOf="@id/text6"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:paddingRight="250dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MarkSmith"
        android:textSize="10sp"
        android:textColor="@color/colorbrown"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="280dp"
        android:paddingLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lorem"
        android:textColor="@color/colorsearch"
        android:textSize="10sp"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plus"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="320dp"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/done"
    android:textColor="@color/colordone"
    android:textSize="10dp"
    android:textStyle="bold"
    android:background="@drawable/borderbottom"
    android:paddingBottom="15dp"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/view"
    android:layout_marginLeft="25dp"/>
    <TextView
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:background="@drawable/selectbar"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="11dp"
        android:paddingLeft="5dp"
        android:paddingTop="3dp"
        android:text="@string/noneselect"
        android:layout_marginRight="15dp"
        android:textSize="9sp"/>
    <Button
        android:layout_width="60dp"
        android:layout_height="18dp"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/done"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>